--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             });
             map.addLayer(layer);
               L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    attribution: 'for TCR Class 2021 &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors '
 }).addTo(map);
         </script>
     </body>
