--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="mymap"></div>
         <script type="text/javascript">
            
-          
+            var layer = new L.StamenTileLayer("terrain");
             var map = new L.Map("mymap", {
                 /* Center: Aachen, Germany */
                 center: new L.LatLng(50.77664, 6.08342),
