--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </head>
     <body>
-        <div id="mymap"></div>
+        <div id="map" style="width: 600px; height: 400px;"></div>
         <script type="text/javascript">
            
            
