--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Quick Start - Leaflet</title>
+        <title>Hello TCR!</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,7 @@
 
     </head>
     <body>
+
         <h1>Hello TCR</h1>
         
         <div id="map" style="width: 600px; height: 400px;"></div>
